Add fetch implementation for safari users

--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,5 @@
 <html><head>
+<script type='text/javascript' src='fetch.js'></script>
 <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
     <script type='text/javascript'>
 	google.charts.load('current', {'packages':['corechart']});
@@ -86,7 +87,7 @@
 	arraydata.push(titleRow) ;
   var lastArrayRow = [null,0,0];
 	json.forEach(function (element)  {
-	  var arrayRow = [new Date(element._id.minute)] ;
+	  var arrayRow = [new Date(element._id.minute+':00.000Z')] ;
 	  for(var i = 0; i< sensorjson.length; i++) {
 	    var sensor = sensorjson[i]
 
