change door curvetype back to none

--- a/web/index.html
+++ b/web/index.html
@@ -149,7 +149,7 @@
 	var options = {
 	title: 'Doors',
   backgroundColor: 'black',
-  curveType: 'function',
+  curveType: 'none',
   vAxis: {textStyle: { color: 'white' }},
   hAxis: {textStyle: { color: 'white' }},
   legend: {textStyle: { color: 'white' }, position: 'bottom'} };
