--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <html><head>
   <meta charset="utf-8"/>
-<script type='text/javascript' src='fetch.js'></script>
+<script type='text/javascript' src='index.js'></script>
 <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
     <script type='text/javascript'>
 	google.charts.load('current', {'packages':['corechart']});
