--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,8 @@
 <html><head>
   <meta charset="utf-8"/>
-<script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
-<script type='text/javascript' src='index.js'></script>
+
+
  </head>
- <body style="background-color: black;"></body>
+ <body style='background-color: black;'><div id='root'></div>
+  <script type='text/javascript' src='index.js'></script></body>
  </html>
