--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,6 @@
 
 
  </head>
- <body style='background-color: black;'><div id='root'></div>
+ <body><div id='root'></div>
   <script type='text/javascript' src='index.js'></script></body>
  </html>
