--- a/web/index.html
+++ b/web/index.html
@@ -2,5 +2,6 @@
   <meta charset="utf-8"/>
  </head>
  <body style='background-color: black'><div id='root'/>
+  <script type='text/javascript' src='commons.js'></script>
   <script type='text/javascript' src='index.js'></script></body>
  </html>
