--- a/web/menu.html
+++ b/web/menu.html
@@ -2,6 +2,6 @@
   <meta charset="utf-8"/>
  </head>
  <body><div id='root'/>
-  <script type='text/javascript' src='commons.js'>
+  <script type='text/javascript' src='commons.js'></script>
   <script type='text/javascript' src='menu.js'></script></body>
  </html>
